Updated provider check your answers page

--- a/app/views/v6/provider/create/check-your-answers.html
+++ b/app/views/v6/provider/create/check-your-answers.html
@@ -16,15 +16,15 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
 
         <h1 class="govuk-heading-l">Check your answers before submitting your vacancy</h1>
 
-        <h2 class="govuk-heading-m">Apprenticeship summary</h2>
+        <h2 class="govuk-heading-m">Vacancy summary</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              What do you want to call this vacancy?
+              Vacancy title
             </dt>
             <dd class="govuk-summary-list__value">
-              [[your advert name]]
+              [[your vacancy name]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -34,7 +34,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              What training will the apprentice take?
+              Training course
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected training]]
@@ -47,7 +47,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Have you found a training provider?
+              Training provider
             </dt>
             <dd class="govuk-summary-list__value">
               [[your training provider]]
@@ -60,7 +60,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Short description of the apprenticeship
+              Summary of the apprenticeship
             </dt>
             <dd class="govuk-summary-list__value">
               [[your short description]]
@@ -73,9 +73,24 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Description of the apprenticeship
+              What will the apprentice be doing?
+              <br>
+              <br>
+              Training and qualification levels
+              <br>
+              <br>
+              Future prospects
             </dt>
             <dd class="govuk-summary-list__value">
+              [[your description]]
+              <br>
+              <br>
+              <br>
+              <br>
+              [[your description]]
+              <br>
+              <br>
+              <br>
               [[your description]]
             </dd>
             <dd class="govuk-summary-list__actions">
@@ -89,61 +104,85 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
         <h2 class="govuk-heading-m">Employment details</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              How much would you like to pay the apprentice?
-            </dt>
-            <dd class="govuk-summary-list__value">
-              [[selected pay]]
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> pay</span>
-              </a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Duration and working hours
-            </dt>
-            <dd class="govuk-summary-list__value">
-              [[selected hours]]
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> selected hours</span>
-              </a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Important dates
+              Application closing date
+              <br>
+              <br>
+              Apprenticeship start date
+              <br>
+              <br>
+              Disability Confident Employer?
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected dates]]
+              <br>
+              <br>
+              <br>
+              [[selected dates]]
+              <br>
+              <br>
+              <br>
+              [[Yes if selected tick box, No if not selected]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> selected dates</span>
+                Change<span class="govuk-visually-hidden"> description</span>
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Where will the apprentice work?
+              Pay rate
+              <br>
+              <br>
+              Extra information about pay (optional)
             </dt>
             <dd class="govuk-summary-list__value">
-              [[selected location]]
+              [[selected pay]]
+              <br>
+              <br>
+              [[your description, or if the user has not written anything just put None]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> selected location</span>
+                Change<span class="govuk-visually-hidden"> description</span>
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              How many positions are there? 
+              Duration
+              <br>
+              <br>
+              Working week details
+              <br>
+              <br>
+              Hours per week
+            </dt>
+            <dd class="govuk-summary-list__value">
+              [[selected months or years]]
+              <br>
+              <br>
+              [[your description]]
+              <br>
+              <br>
+              <br>
+              [[selected number]]
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> description</span>
+              </a>
+            </dd>
+          </div>
+          
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Number of positions
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected number]]
@@ -154,40 +193,84 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
               </a>
             </dd>
           </div>
+
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Address
+            </dt>
+            <dd class="govuk-summary-list__value">
+              [[selected location]]
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> selected location</span>
+              </a>
+            </dd>
+          </div>
+       
         </dl>
 
         <h2 class="govuk-heading-m">Skills and qualifications</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              What skills and personal qualities would you like the applicant to have?
+              Qualifications required
+              <br>
+              <br>
+              Skills
             </dt>
             <dd class="govuk-summary-list__value">
-              [[skills and qualities]]
+              [[selected Y/N]]
+              <br>
+              <br>
+              <br>
+             [[skills and qualities]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> skills and qualities</span>
+                Change<span class="govuk-visually-hidden"> description</span>
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              What qualifications would you like the applicant to have?
+              Qualification type
+              <br>
+              <br>
+              Subject
+              <br>
+              <br>
+              Grade
+              <br>
+              <br>
+              Essential or desirable?
             </dt>
             <dd class="govuk-summary-list__value">
-              [[selected qualifications]]
+              [[qualification selected]]
+              <br>
+              <br>
+              [[your description]]
+              <br>
+              <br>
+              [[your description]]
+              <br>
+              <br>
+              [[essential or desirable selected]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> selected qualifications</span>
+                Change<span class="govuk-visually-hidden"> description</span>
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              What else would you like the applicant to consider? (optional)
+              Other things to consider
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected considerations]]
@@ -205,7 +288,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Which organisation is this vacancy for?
+              Name of organisation
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected organisation]]
@@ -218,7 +301,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Which employer name do you want on your vacancy?
+              Name of employer on vacancy
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected employer name]]
@@ -229,58 +312,97 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Add some information about the employer
+              Employer information
+              <br>
+              <br>
+              Organisation website (optional)
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected information]]
+              <br>
+              <br>
+              <br>
+              [[your description, or if the user has not written anything just put None]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> employer information</span>
+                Change<span class="govuk-visually-hidden"> description</span>
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-               Add contact information about the employer
+              Contact name (optional)
+              <br>
+              <br>
+              Contact email (optional)
+              <br>
+              <br>
+              Contact number (optional)
             </dt>
             <dd class="govuk-summary-list__value">
+              [[selected contact information]]
+              <br>
+              <br>
+              <br>
+              [[selected contact information]]
+              <br>
+              <br>
+              <br>
               [[selected contact information]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> selected contact information</span>
+                Change<span class="govuk-visually-hidden"> description</span>
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              How would you like to receive applications?
+              Application website
+              <br>
+              <br>
+              <br>
+              <br>
+              Explain the application process (optional)
             </dt>
             <dd class="govuk-summary-list__value">
-              [[selected answer]]
+               [[selected answer, if it is ‘different website, the link should be included]]
+              <br>
+              <br>
+             [[your description, or if the user has not written anything just put None]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> selected answer</span>
+                Change<span class="govuk-visually-hidden"> description</span>
               </a>
             </dd>
-          </div>
+          </div>     
+
         </dl>
 
         <h2 class="govuk-heading-m">Now submit your vacancy</h2>
 
         <p class="govuk-body">By submitting this vacancy you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
 
+        <p><a class="govuk-link" href="advert-preview">Preview vacancy before submitting</a></p>
+
         <form action="/form-handler" method="post" novalidate>
 
           <input type="hidden" name="answers-checked" value="true">
 
-          <button class="govuk-button" data-module="govuk-button">
-            Submit vacancy
-          </button>
+          <div class="govuk-button-group">
+            <button class="govuk-button" data-module="govuk-button">
+              Submit vacancy
+            </button>
+
+            <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
+          </div>
 
         </form>
 
