Updated copy for number of positions page

--- a/app/views/v6/provider/create/positions.html
+++ b/app/views/v6/provider/create/positions.html
@@ -17,7 +17,7 @@ How many positions are there for this apprenticeship? - Recruitment - {{serviceN
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
           <h1 class="govuk-fieldset__heading">
-            How many positions are there for this apprenticeship?
+            How many positions are available?
           </h1>
         </legend>
         <div class="govuk-form-group govuk-!-margin-bottom-8">
