--- a/app/views/v6/provider/create/check-your-answers.html
+++ b/app/views/v6/provider/create/check-your-answers.html
@@ -390,7 +390,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
 
         <p class="govuk-body">By submitting this vacancy you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
 
-        <p><a class="govuk-link" href="advert-preview">Preview vacancy before submitting</a></p>
+        <p><a class="govuk-link" href="preview-vacancy">Preview vacancy before submitting</a></p>
 
         <form action="/form-handler" method="post" novalidate>
 
