--- a/app/views/tp-home-layout.html
+++ b/app/views/tp-home-layout.html
@@ -324,16 +324,16 @@
       };
 
       //Legacy floating header script
-      $(window).scroll(function () {
-          if ($(window).scrollTop() >= 110) {
-              $('.floating-menu').addClass('fixed-header');
-              $('.js-float').addClass('width-adjust');
-          }
-          else {
-              $('.floating-menu').removeClass('fixed-header');
-              $('.js-float').removeClass('width-adjust');
-          }
-      });
+      // $(window).scroll(function () {
+      //     if ($(window).scrollTop() >= 110) {
+      //         $('.floating-menu').addClass('fixed-header');
+      //         $('.js-float').addClass('width-adjust');
+      //     }
+      //     else {
+      //         $('.floating-menu').removeClass('fixed-header');
+      //         $('.js-float').removeClass('width-adjust');
+      //     }
+      // });
 
       $(function () {
           //Legacy menu script
