--- a/app/views/v6/provider/create/about-employer.html
+++ b/app/views/v6/provider/create/about-employer.html
@@ -20,6 +20,7 @@ Add some information - Recruitment - {{serviceName}} - GOV.UK
         {%else%}
         <p class="govuk-body">You can add information about your organiasation. This information will be saved and automatically applied for any new vacancy for this organisation.</p>
         {%endif%}-->
+        <p>Updating the employer information will also update the employer information on any unapproved vacancies, for example, draft, pending review or rejected vacancies.</p>
         <form method="post">
           <div class="govuk-character-count govuk-input--width-50" data-module="character-count" data-minlength="50" data-maxlength="500">
             <div class="govuk-form-group">
