--- a/app/views/v6/provider/create/duration.html
+++ b/app/views/v6/provider/create/duration.html
@@ -20,8 +20,8 @@ Duration and working hours - Recruitment - {{serviceName}} - GOV.UK
         <label class="govuk-label govuk-!-font-weight-bold" for="duration">
           How long is the whole apprenticeship, including work and training?
         </label>
-        <span class="govuk-hint">The apprenticeship must last at least 12 months</span>
-        <span class="govuk-hint">For {{data.training_level or "Food and Drink: Fish and Shellfish Industry Skills"}},  Typical length is 24 months</span><br>
+        <span class="govuk-hint">The apprenticeship must last at least 12 months.</span>
+        <span class="govuk-hint">For {{data.training_level or "Food and Drink: Fish and Shellfish Industry Skills"}}, the typical length is 24 months.</span><br>
         <input class="govuk-input govuk-input--width-4" id="duration" name="duration" type="text">
         <select class="govuk-select" id="sort" name="sort">
 
