Change to task list urls

--- a/app/views/v6/provider/create/task-list.html
+++ b/app/views/v6/provider/create/task-list.html
@@ -76,7 +76,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               {% if data.section1 == "completed" %}
-              <a href="training-select?return_url=task-list" aria-describedby="eligibility-status">
+              <a href="std-select?return_url=task-list" aria-describedby="eligibility-status">
                 Training course
               </a>
               {% else %}
@@ -260,7 +260,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               {% if data.section3 == "completed" %}
-              <a href="qualification-question?return_url=task-list" aria-describedby="contact-details-status">
+              <a href="qualifications?return_url=task-list" aria-describedby="contact-details-status">
                 Qualifications
               </a>
               {%else%}
