Fixed input linking to label

--- a/app/views/v6/provider/create/location.html
+++ b/app/views/v6/provider/create/location.html
@@ -30,9 +30,9 @@ Where will the apprentices work? - Recruitment - {{serviceName}} - GOV.UK
               </label>
             </div>            
             <div class="govuk-radios__item" data-target="business-name-vacancy-panel">
-              <input class="govuk-radios__input" id="selected-organisation-id" name="selected-organisation-id" type="radio"
+              <input class="govuk-radios__input" id="different-location" name="selected-organisation-id" type="radio"
                 value="Organisation {{i}}" data-search-value="Organisation" data-aria-controls="other-location-conditional">
-              <label class="govuk-label govuk-radios__label" for="selected-organisation-id">A different location</label>
+              <label class="govuk-label govuk-radios__label" for="different-location">A different location</label>
             </div>
             <div class="govuk-radios__conditional" id="other-location-conditional">
               <div id="address-details" class="address-manual-input">
