--- a/app/views/v6/provider/create/wages.html
+++ b/app/views/v6/provider/create/wages.html
@@ -109,7 +109,10 @@ How much would you like to pay the apprentice? - Recruitment - {{serviceName}} -
        
       <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="250">
         <div class="govuk-form-group">
-          <p class="govuk-body govuk-!-font-weight-bold">Extra information about pay (optional)</p>
+          <label class="govuk-label govuk-!-font-weight-bold" for="WageAdditionalInformation">
+            Extra information about pay (optional)
+          </label>
+
           <div id="WageAdditionalInformation-hint" class="govuk-hint">
             For example, bonus schemes, performance increases or benefits
           </div>
