--- a/app/views/v6/provider/create/employers-select.html
+++ b/app/views/v6/provider/create/employers-select.html
@@ -28,7 +28,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
     {% endif %}
     <!-- <span class="govuk-caption-xl">Recuitment</span> -->
 
-    <h1 class="govuk-heading-xl">Which employer do you want to create a vacancy for?</h1>
+    <h1 class="govuk-heading-xl">Which organisation do you want to create a vacancy for?</h1>
     <form method="post" id="employers-form" action="">
     <!--<form method="post" id="employers-form" action="create-vacancy">-->
       {% if data.employerAmount > 10 %}
@@ -144,7 +144,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
       <!--<button type="submit" class="govuk-button" data-module="govuk-button">Save and continue</button>-->
       {{ govukButton({
         text: "Save and continue",
-        href: "std-select"
+        href: "employer"
       }) }}      
       <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
     </form>
