--- a/app/views/v6/provider/create/task-list.html
+++ b/app/views/v6/provider/create/task-list.html
@@ -325,7 +325,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               {% if data.section3 == "completed" %}
-              <a href="employer?return_url=task-list" aria-describedby="list-convictions-status">
+              <a href="employer-name?return_url=task-list" aria-describedby="list-convictions-status">
                 Name of employer on vacancy
               </a>
               {%else%}
