--- a/app/views/v6/provider/create/dates.html
+++ b/app/views/v6/provider/create/dates.html
@@ -27,6 +27,7 @@ Important dates - Recruitment - {{serviceName}} - GOV.UK
       </div>
     </div>
     {% endif %}
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
     <h1 class="govuk-heading-xl">Important dates</h1>
     <!-- {% if data.expiryDate %}
     <div class="govuk-warning-text">
