--- a/app/views/v6/provider/create/qualifications-list.html
+++ b/app/views/v6/provider/create/qualifications-list.html
@@ -18,8 +18,8 @@ Qualifications - Recruitment - {{serviceName}} - GOV.UK
                 <p class="govuk-body govuk-!-margin-bottom-0">Succesfully removed qualification</p>
         </div>
         {% endif %}
+        <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
         <h1 class="govuk-heading-xl">
-          <span class="govuk-caption-l">{% if data.title %}{{data.title}}{% else %}Business administration apprenticeship{% endif %}</span>
           Qualifications
         </h1>
         <table class="govuk-table responsive-table">
