--- a/app/views/v6/provider/create/contact.html
+++ b/app/views/v6/provider/create/contact.html
@@ -14,7 +14,8 @@ Add contact information - Recruitment - {{serviceName}} - GOV.UK
 
     <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-xl"><span class="govuk-caption-l">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
+            <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+            <h1 class="govuk-heading-xl">
               Contact details for {% if data.user == "employer" %}{{data.orgName}}{% else %}{{ data.providerName}}{% endif %} (optional)
             </h1>
             <p>This should be someone an applicant can contact to ask questions about the apprenticeship position.</p>
