--- a/app/views/v6/provider/create/duration.html
+++ b/app/views/v6/provider/create/duration.html
@@ -13,6 +13,7 @@ Duration and working hours - Recruitment - {{serviceName}} - GOV.UK
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
     <h1 class="govuk-heading-xl">Duration and working hours</h1>
 
     <form method="post">
