--- a/app/views/v6/provider/create/long-description.html
+++ b/app/views/v6/provider/create/long-description.html
@@ -40,11 +40,8 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
       </div>
     </div>
     {% endif%}
-
-    <h1 class="govuk-heading-xl">
-      <span class="govuk-caption-l">{% if data.title %}{{data.title}}{% else %}Developer apprenticeship{% endif %}</span>
-      About the apprenticeship
-    </h1>
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+    <h1 class="govuk-heading-xl">About the apprenticeship</h1>
     <form method="post">
       <fieldset class="govuk-fieldset">
 
