--- a/app/views/v6/provider/create/preview-vacancy.html
+++ b/app/views/v6/provider/create/preview-vacancy.html
@@ -22,7 +22,7 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
       <div class="govuk-grid-row govuk-!-margin-bottom-6">
         <div class="govuk-grid-column-full">
           <h2 class="govuk-heading-xl govuk-!-margin-bottom-6 govuk-grid-column-two-thirds">
-            Safety, Health & Environment Technician Apprentice
+            {% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}
             <span class="govuk-caption-l">AMAZON UK SERVICES LTD.</span>
           </h2>
         </div>
