--- a/app/views/v6/provider/create/qualifications.html
+++ b/app/views/v6/provider/create/qualifications.html
@@ -29,7 +29,7 @@ What qualifications would you like the applicant to have? - Recruitment - {{serv
           </div>
           {% endif %}
         <h1 class="govuk-heading-xl">
-          <span class="govuk-caption-l">{% if data.title %}{{data.title}}{% else %}Developer apprenticeship{% endif %}</span>
+          <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
           What qualifications would you like the applicant to have?
         </h1>
         <form method="post">
