--- a/app/views/v6/provider/create/short-description.html
+++ b/app/views/v6/provider/create/short-description.html
@@ -13,7 +13,7 @@ Short description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-        <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %} vacancy</span>
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
     <h1 class="govuk-heading-xl">Summary of the apprenticeship<h1>
     <form method="post">
       <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="350">
