--- a/app/views/v6/provider/create/std-select.html
+++ b/app/views/v6/provider/create/std-select.html
@@ -14,6 +14,7 @@ What training will the apprentice take? - Recruitment - {{serviceName}} - GOV.UK
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
+        <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
         <h1 class="govuk-heading-xl">What training course will the apprentice take?</h1>
         <div class="" style="display:none;">
           {% for item in data.training %}
