--- a/app/views/v6/provider/create/things-to-consider.html
+++ b/app/views/v6/provider/create/things-to-consider.html
@@ -13,7 +13,7 @@ What else do you want the applicant to consider? (optional) - Recruitment - {{se
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">    
-      <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %} vacancy</span>
+      <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
     <form method="post">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
      <h1 class="govuk-fieldset__heading">
